swen430as1/tests/valid/real/Real_Valid_16.while
void main() {
    assert {h:{f:1.0},g:2.0} == {h:{f:1.0}, g:2.0};
    assert {h:{f:1},g:2.0} == {h:{f:1.0}, g:2.0};
    assert {h:{f:1.0},g:2} == {h:{f:1.0}, g:2.0};
    assert {h:{f:1.0},g:2.0} == {h:{f:1}, g:2.0};
    assert {h:{f:1.0},g:2.0} == {h:{f:1.0}, g:2};
}
